fix test TrainScheduleServiceImplTest